--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -229,7 +229,7 @@
                           <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <h5 class="modal-title" id="exampleModalLabel">Adding project</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
@@ -248,10 +248,6 @@
                                       <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Submit</button>
                                     </div>
                                 </form>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
                               </div>
                             </div>
                           </div>
