--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -188,38 +188,11 @@
                   <div class="card h-100 card-plain border">
                     <div class="card-body d-flex flex-column justify-content-center text-center">
                         <i class="fa fa-plus text-secondary mb-3"></i>
-                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProjectModal">
                         New project
                       </button>
+                {% include 'dashboard/modal/project_addform_modal.html' %}
 
-                      <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                          <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Adding project</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                {{ formProject.media }}
-                                <form role="form" method="post" action="#">
-                                    {% csrf_token %}
-                                    {% for field in formProject %}
-                                      <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                                      <div class="mb-3">
-                                        {{field}}
-                                      </div>
-                                      <span class="text-danger">{{ field.errors }}</span>
-                                    {% endfor %}
-
-                                    <div class="text-center">
-                                      <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Submit</button>
-                                    </div>
-                                </form>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
 
                     </div>
                   </div>
