--- a/templates/dashboard/project/view_project.html
+++ b/templates/dashboard/project/view_project.html
@@ -257,6 +257,9 @@
               <div class="card-body p-3">
                         <button type="button" class="btn btn-outline-primary btn-sm mb-0">Add task</button>
               </div>
+              <div class="card-body p-3">
+                        <button type="button" class="btn btn-outline-primary btn-sm mb-0">Add equip project</button>
+              </div>
 
             </div>
           </div>
