--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -20,7 +20,7 @@
                 Alec Thompson
               </h5>
               <p class="mb-0 font-weight-bold text-sm">
-                CEO / Co-Founder
+                <!--CEO / Co-Founder -->
               </p>
             </div>
           </div>
