--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -381,7 +381,7 @@
         </div>
       </div>
 
-      {% include "includes/footer.html" %}
+      <!-- {% include "includes/footer.html" %} -->
       
     </div>
   </div>
