--- a/templates/dashboard/view_project.html
+++ b/templates/dashboard/view_project.html
@@ -195,16 +195,19 @@
               </div>
               <div class="card-body p-3">
                 <ul class="list-group">
+                  {% for task in tasks %}
                   <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                     <div class="avatar me-3">
                       <img src="{% static 'img/kal-visuals-square.jpg' %}" alt="kal" class="border-radius-lg shadow">
                     </div>
                     <div class="d-flex align-items-start flex-column justify-content-center">
-                      <h6 class="mb-0 text-sm">Sophie B.</h6>
-                      <p class="mb-0 text-xs">Hi! I need more information..</p>
+                      <h6 class="mb-0 text-sm">{{ task.name }}</h6>
+                      <p class="mb-0 text-xs">{{ task.name }}</p>
                     </div>
                     <a class="btn btn-link pe-3 ps-0 mb-0 ms-auto" href="javascript:;">Reply</a>
                   </li>
+                  {% empty %}
+
                   <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                     <div class="avatar me-3">
                       <img src="{% static 'img/marie.jpg' %}" alt="kal" class="border-radius-lg shadow">
@@ -245,6 +248,7 @@
                     </div>
                     <a class="btn btn-link pe-3 ps-0 mb-0 ms-auto" href="javascript:;">Reply</a>
                   </li>
+                  {% endfor %}
                 </ul>
               </div>
             </div>
@@ -255,11 +259,10 @@
                 <h6 class="mb-0">Buttons</h6>
               </div>
               <div class="card-body p-3">
-                        <button type="button" class="btn btn-outline-primary btn-sm mb-0">Add task</button>
+                        <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#addTaskModal">Add task</button>
+                        <button type="button" class="btn btn-outline-primary btn-sm mb-0">Add project team</button>
               </div>
-              <div class="card-body p-3">
-                        <button type="button" class="btn btn-outline-primary btn-sm mb-0">Add equip project</button>
-              </div>
+   {% include 'dashboard/modal/task_addform_modal.html' %}
 
             </div>
           </div>
