Ajout de l'envoi de mail à l'inscription

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -121,7 +121,7 @@
                         </h5>
                       </a>
                       <p class="mb-4 text-sm">
-                        {{project.description|truncatechars:20}}
+                        {{project.description|truncatechars:20|safe}}
                       </p>
                       <div class="d-flex align-items-center justify-content-between">
                         <a href="{% url 'view_project' project.id %}">
