--- a/templates/dashboard/projects.html
+++ b/templates/dashboard/projects.html
@@ -298,8 +298,10 @@
                 <tr>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Author</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Budget</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Responsible</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Creation date</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Last update date</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">Completion</th>
                   <th></th>
                 </tr>
@@ -313,7 +315,7 @@
                         <img src="{% static 'img/small-logos/logo-jira.svg' %}" class="avatar avatar-sm rounded-circle me-2" alt="jira">
                       </div>
                       <div class="my-auto">
-                        <h6 class="mb-0 text-sm">{{ project.name}}</h6>
+                        <h6 class="mb-0 text-sm">{{ project.name|truncatechars:10|safe }}</h6>
                       </div>
                     </div>
                   </td>
@@ -329,7 +331,24 @@
                     </div>
                   </td>
                   <td>
+                    <div class="d-flex px-2 py-1">
+                      <div>
+                        <img src="{% static 'img/team-4.jpg' %}" class="avatar avatar-sm me-3" alt="user6">
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="mb-0 text-sm">{{project.responsible.full_name}}</h6>
+                        <p class="text-xs text-secondary mb-0">{{project.responsible.email}}</p>
+                      </div>
+                    </div>
+                  </td>
+                    <td>
                     <span class="text-xs font-weight-bold">working</span>
+                  </td>
+                  <td class="align-middle text-center">
+                    <span class="text-secondary text-xs font-weight-bold">{{ project.creation_date }}</span>
+                  </td>
+                  <td class="align-middle text-center">
+                    <span class="text-secondary text-xs font-weight-bold">{{ project.update_date }}</span>
                   </td>
                   <td class="align-middle text-center">
                     <div class="d-flex align-items-center justify-content-center">
