--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -252,7 +252,7 @@
     </ul>
 
   </div>
-  <div class="sidenav-footer mx-3 ">
+ <!-- <div class="sidenav-footer mx-3 ">
     <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
       <div class="full-background" style="background-image: url('{% static 'img/curved-images/white-curved.jpg' %}')"></div>
       <div class="card-body text-start p-3 w-100">
@@ -269,5 +269,5 @@
     <a target="_blank"
        class="btn bg-gradient-primary mt-3 w-100" 
        href="https://appseed.us/support/">Support</a>
-  </div>
+  </div> -->
 </aside>
