--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -17,8 +17,8 @@
           <div class="col-auto my-auto">
             <div class="h-100">
               <h5 class="mb-1">
-                <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark"> {{request.user.full_name}}</strong> &nbsp; </li>
-
+                <li class="list-group-item border-0 ps-0 pt-0 text-sm"> {{request.user.full_name}} &nbsp; </li>
+              {{request.user.role}}
 
 
 
@@ -170,10 +170,28 @@
               </p> -->
               <hr class="horizontal gray-light my-4">
               <ul class="list-group">
-                <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Fullname:{{request.user.full_name}}</strong> &nbsp; </li>
+                <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Fullname: </strong> {{request.user.full_name}} &nbsp; </li>
                 <!-- <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Mobile:</strong> &nbsp; (44) 123 1234 123</li> -->
-                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email: {{request.user.email}}</strong> &nbsp; </li>
-                <!-- <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Location:</strong> &nbsp; USA</li> -->
+                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email: </strong> {{request.user.email}} &nbsp; </li>
+                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Username:</strong> {{request.user.username}} &nbsp; </li> 
+                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Account type: </strong> {{request.user.role}} &nbsp; </li> 
+                <li class="nav-item d-flex align-items-center">
+                  {% if request.user.is_superuser %}
+                  <a href="{% url 'admin:password_change' %}" class="nav-link text-body font-weight-bold px-0">
+                  {% else %}
+                  <a href="{% url 'password_change' %}" class="nav-link text-body font-weight-bold px-0">
+                  {% endif %}
+                    <span class="d-sm-inline d-none me-3">Change Password</span>
+                  </a>
+                </li>
+                <li class="nav-item d-flex align-items-center">
+                  
+                  <a href="" class="nav-link text-body font-weight-bold px-0">
+                  
+                    <span class="d-sm-inline d-none me-3">Change Email</span>
+                  </a>
+                </li>
+                
                 <li class="list-group-item border-0 ps-0 pb-0">
                   <!--<strong class="text-dark text-sm">Social:</strong> &nbsp;
                   <a class="btn btn-facebook btn-simple mb-0 ps-1 pe-2 py-0" href="javascript:;">
@@ -251,10 +269,10 @@
             </div>
           </div>
         </div>
-        <div class="col-12 mt-4">
+        <!--<div class="col-12 mt-4">
           <div class="card mb-4">
             <div class="card-header pb-0 p-3">
-             <!-- <h6 class="mb-1">Projects</h6>
+              <h6 class="mb-1">Projects</h6>
               <p class="text-sm">Architects design houses</p>
             </div>
             <div class="card-body p-3">
