--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -10,27 +10,26 @@
         </li>
       </ol>
     </nav>
-    <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+    <!--<div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
       <div class="ms-md-auto pe-md-3 d-flex align-items-center">
         <div class="input-group">
           <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
           <input type="text" class="form-control" placeholder="Type here...">
         </div>
-      </div>
+      </div>-->
       <ul class="navbar-nav  justify-content-end">
 
         {% if request.user.is_authenticated %}
           <li class="nav-item d-flex align-items-center">
-
+            <i class="fa fa-user me-sm-1"></i>
+              <span class="d-sm-inline d-none me-3">{{request.user.username}}</span>
             {% if request.user.is_superuser %}
             <a href="{% url 'admin:logout' %}" class="nav-link text-body font-weight-bold px-0">
             {% else %}
             <a href="{% url 'logout' %}" class="nav-link text-body font-weight-bold px-0">
-            {% endif %}
-            
-              <i class="fa fa-user me-sm-1"></i>
-              <span class="d-sm-inline d-none me-3">Logout</span>
-            </a>
+              {% endif %}
+                <span class="d-sm-inline d-none me-3">Logout</span>
+              </a>
           </li>
         {% else %}
           <li class="nav-item d-flex align-items-center">
@@ -41,7 +40,7 @@
           </li>
         {% endif %}
 
-        <li class="nav-item d-flex align-items-center">
+        <!--<li class="nav-item d-flex align-items-center">
 
           {% if request.user.is_superuser %}
           <a href="{% url 'admin:password_change' %}" class="nav-link text-body font-weight-bold px-0">
@@ -50,7 +49,7 @@
           {% endif %}
             <span class="d-sm-inline d-none me-3">Change Password</span>
           </a>
-        </li>
+        </li>-->
 
         <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
           <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
