--- a/templates/authentication/account_activation_status.html
+++ b/templates/authentication/account_activation_status.html
@@ -43,10 +43,17 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
                     <br />
                </div>
             </div>
         </div>
+        <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!-- Load messages -->
+            {% include 'includes/alerts.html' %}
+        </div>
+    </div>
     </section>
 
 {% endblock content %}
