--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -82,6 +82,12 @@
         </div>
       </div>
     </section>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!-- Load messages -->
+            {% include 'includes/alerts.html' %}
+        </div>
+    </div>
   </main>
 
 
