--- a/templates/dashboard/virtual-reality.html
+++ b/templates/dashboard/virtual-reality.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Soft UI Dashboard - v1.0.6
+* Project Management - v1.0.6
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/soft-ui-dashboard
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
 
   <title>
-    Soft UI Dashboard - VR Page | AppSeed
+    Project Management - VR Page | AppSeed
   </title>
   
   <!--     Fonts and icons     -->
