--- a/templates/layouts/base-rtl.html
+++ b/templates/layouts/base-rtl.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Soft UI Dashboard - v1.0.6
+* Project Management - v1.0.6
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/soft-ui-dashboard
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
 
   <title>
-    Soft UI Dashboard - {% block title %}{% endblock %} | AppSeed
+    Project Management - {% block title %}{% endblock %} | AppSeed
   </title>
 
   <!--     Fonts and icons     -->
@@ -36,6 +36,7 @@
   <link href="{% static 'css/nucleo-svg.css' %}" rel="stylesheet" />
   <!-- CSS Files -->
   <link id="pagestyle" href="{% static 'css/soft-ui-dashboard.css' %}" rel="stylesheet" />
+  <link id="pagestyle_style" href="{% static 'css/style.css' %}" rel="stylesheet" />
   <link id="pagestyle_dark" href="{% static 'css/dark-theme-core.css' %}" rel="stylesheet" />
 
   <!-- Specific CSS goes HERE -->
